--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -15,12 +15,73 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <style>
+      .card-img-top {
+        height: 200px;
+        object-fit: cover;
+      }
+      .profile-img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+      .navbar {
+        background-color: #f8f9fa;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      .card {
+        transition: transform 0.2s;
+        border: 1px solid rgba(0, 0, 0, 0.125);
+        border-radius: 0.75rem;
+      }
+      .card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      }
+      #articleTabs .nav-link.active {
+        font-weight: 600;
+        background-color: #0d6efd;
+        color: white;
+      }
+      #articleTabs .nav-link {
+        color: #495057;
+      }
+      .btn-primary {
+        background-color: #0d6efd;
+        border-color: #0d6efd;
+      }
+      .btn-primary:hover {
+        background-color: #0b5ed7;
+        border-color: #0a58ca;
+      }
+      .modal-content {
+        border-radius: 0.75rem;
+        border: none;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      }
+      .form-control:focus,
+      .form-select:focus {
+        border-color: #86b7fe;
+        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+      }
+      .notification {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1050;
+        min-width: 300px;
+        border-radius: 0.5rem;
+      }
+    </style>
   </head>
   <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand fw-bold text-primary" href="#">BlogHub</a>
+        <a class="navbar-brand fw-bold text-primary" href="#">
+          <i class="fas fa-blog me-2"></i>BlogHub
+        </a>
         <div class="d-flex align-items-center">
           <button
             class="btn btn-primary me-2"
@@ -69,7 +130,9 @@
 
     <div class="container">
       <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2 class="h4 mb-0">My Articles</h2>
+        <h2 class="h4 mb-0">
+          <i class="fas fa-newspaper me-2"></i>My Articles
+        </h2>
         <div>
           <button class="btn btn-outline-primary" id="generateArticleBtn">
             <i class="fas fa-magic me-1"></i> Generate Article
@@ -88,7 +151,7 @@
             type="button"
             role="tab"
           >
-            Published
+            <i class="fas fa-check-circle me-1"></i> Published
           </button>
         </li>
         <li class="nav-item" role="presentation">
@@ -100,7 +163,7 @@
             type="button"
             role="tab"
           >
-            Scheduled
+            <i class="fas fa-clock me-1"></i> Scheduled
           </button>
         </li>
       </ul>
@@ -113,7 +176,10 @@
           role="tabpanel"
           aria-labelledby="published-tab"
         >
-          <div class="text-center py-5" id="publishedContainer">
+          <div class="row g-3" id="publishedContainer">
+            <!-- Published articles will be loaded here -->
+          </div>
+          <div class="text-center py-5" id="publishedEmpty">
             <div class="mb-3">
               <i class="fas fa-newspaper fa-4x text-muted mb-3"></i>
               <h4 class="text-muted">No articles published yet</h4>
@@ -137,7 +203,10 @@
           role="tabpanel"
           aria-labelledby="scheduled-tab"
         >
-          <div class="text-center py-5" id="scheduledContainer">
+          <div class="row g-3" id="scheduledContainer">
+            <!-- Scheduled articles will be loaded here -->
+          </div>
+          <div class="text-center py-5" id="scheduledEmpty">
             <div class="mb-3">
               <i class="fas fa-calendar-alt fa-4x text-muted mb-3"></i>
               <h4 class="text-muted">No scheduled articles</h4>
@@ -169,7 +238,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="createArticleModalLabel">
-              Create New Article
+              <i class="fas fa-plus me-2"></i>Create New Article
             </h5>
             <button
               type="button"
@@ -218,7 +287,7 @@
                     >Category</label
                   >
                   <select class="form-select" id="articleCategory">
-                    <option selected>Select a category</option>
+                    <option value="" selected>Select a category</option>
                     <option value="technology">Technology</option>
                     <option value="web-dev">Web Development</option>
                     <option value="ai">Artificial Intelligence</option>
@@ -248,7 +317,7 @@
                   Cancel
                 </button>
                 <button type="submit" class="btn btn-primary">
-                  Publish Article
+                  <i class="fas fa-paper-plane me-1"></i> Publish Article
                 </button>
               </div>
             </form>
@@ -261,146 +330,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom JS -->
-    <script>
-      const API_BASE = "http://localhost:8080/api";
-
-      // 🔹 Logout
-      $("#logoutBtn").on("click", function () {
-        const token = localStorage.getItem("jwt");
-        $.ajax({
-          url: API_BASE + "/auth/logout",
-          method: "POST",
-          headers: { Authorization: "Bearer " + token },
-          success: function () {
-            localStorage.removeItem("jwt");
-            alert("Logged out successfully!");
-            window.location.href =
-              "/Frontend/pages/login-and-register/login-and-register.html";
-          },
-          error: function () {
-            alert("Logout failed");
-          },
-        });
-      });
-
-      // 🔹 Article Create
-      $("#articleForm").on("submit", function (e) {
-        e.preventDefault();
-
-        const title = $("#articleTitle").val().trim();
-        const content = $("#articleContent").val().trim();
-        const category =
-          $("#articleCategory").val() === "Select a category"
-            ? ""
-            : $("#articleCategory").val();
-        const publishDate = $("#publishDate").val();
-        const imageFile = $("#articleImage")[0].files[0];
-
-        const fd = new FormData();
-        fd.append("title", title);
-        fd.append("content", content);
-        fd.append("category", category);
-        if (publishDate) fd.append("publishDate", publishDate);
-        if (imageFile) fd.append("image", imageFile);
-
-        const token = localStorage.getItem("jwt");
-
-        $.ajax({
-          url: API_BASE + "/articles",
-          method: "POST",
-          data: fd,
-          processData: false,
-          contentType: false,
-          headers: { Authorization: "Bearer " + token },
-          success: function (data) {
-            const modal = bootstrap.Modal.getInstance(
-              document.getElementById("createArticleModal")
-            );
-            modal.hide();
-            alert(
-              data.status === "PUBLISHED"
-                ? "Article published!"
-                : "Article scheduled for " + data.scheduleAt
-            );
-            loadMyArticles("PUBLISHED");
-            loadMyArticles("SCHEDULED");
-          },
-          error: function (xhr) {
-            console.error(xhr);
-            alert("Error creating article: " + xhr.status);
-          },
-        });
-      });
-
-      // 🔹 Load My Articles
-      function loadMyArticles(status) {
-        const wrapId =
-          status === "PUBLISHED" ? "publishedContainer" : "scheduledContainer";
-        const container = $("#" + wrapId);
-        container.empty();
-
-        const token = localStorage.getItem("jwt");
-
-        $.ajax({
-          url: `${API_BASE}/articles/me?status=${status}&page=0&size=50`,
-          method: "GET",
-          headers: { Authorization: "Bearer " + token },
-          success: function (json) {
-            if (!json.content.length) {
-              container.html(`
-                <div class="text-center py-5">
-                  <h4 class="text-muted">No ${status.toLowerCase()} articles</h4>
-                </div>
-              `);
-              return;
-            }
-
-            const rows = $('<div class="row g-3"></div>');
-            json.content.forEach((a) => {
-              const col = $(`
-                <div class="col-md-4">
-                  <div class="card h-100">
-                    ${
-                      a.imageUrl
-                        ? `<img src="${a.imageUrl}" class="card-img-top" alt="">`
-                        : ""
-                    }
-                    <div class="card-body d-flex flex-column">
-                      <h5 class="card-title">${a.title}</h5>
-                      <p class="card-text">${a.excerpt}</p>
-                      <div class="mt-auto">
-                        <a class="btn btn-outline-primary btn-sm" href="#view-${
-                          a.id
-                        }">
-                          View
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              `);
-              rows.append(col);
-            });
-
-            container.append(rows);
-          },
-          error: function (xhr) {
-            console.error("Error loading articles", xhr);
-            container.html(`
-              <div class="text-center py-5">
-                <h4 class="text-danger">Error loading articles</h4>
-              </div>
-            `);
-          },
-        });
-      }
-
-      // 🔹 Initial load
-      $(document).ready(function () {
-        loadMyArticles("PUBLISHED");
-        loadMyArticles("SCHEDULED");
-      });
-    </script>
+    <script src="/Frontend/JavaScript/Publisher/publisher-dashboard.js"></script>
   </body>
 </html>
