--- a/Frontend/pages/Admin/payments.html
+++ b/Frontend/pages/Admin/payments.html
@@ -15,15 +15,56 @@
     />
     <style>
       body {
-        background-color: #f0f2f5;
+        background-color: #1a1a1a; /* Dark background */
+        color: #e0e0e0; /* Light text color */
+        font-family: Arial, sans-serif;
+        overflow-x: hidden;
+        position: relative;
       }
       .navbar {
-        background-color: #ffffff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        background-color: #1c1c1c; /* Dark navbar background */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      }
+      .navbar-brand {
+        color: #f0f0f0 !important;
+      }
+      .h5 {
+        color: #f0f0f0 !important;
+      }
+      .alert {
+        background-color: rgba(
+          13,
+          110,
+          253,
+          0.1
+        ); /* Light blue background with transparency */
+        color: #8bb4e1; /* Light blue text color */
+        border: 1px solid rgba(13, 110, 253, 0.2);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        backdrop-filter: blur(5px);
+      }
+      .btn-outline-danger {
+        color: #dc3545;
+        border-color: #dc3545;
+      }
+      .btn-outline-danger:hover {
+        background-color: #dc3545;
+        color: #fff;
+      }
+
+      /* Particle Network Background */
+      #p5-canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
       }
     </style>
   </head>
   <body>
+    <canvas id="p5-canvas"></canvas>
+
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
       <div class="container-fluid">
         <a
@@ -45,6 +86,88 @@
         <i class="fas fa-chart-bar fa-2x mt-3"></i>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+
+    <script>
+      let particles = [];
+      const numParticles = 100;
+      const connectionDistance = 150;
+
+      function setup() {
+        let canvas = createCanvas(windowWidth, windowHeight);
+        canvas.id("p5-canvas");
+        canvas.style("display", "block");
+        canvas.style("position", "fixed");
+        canvas.style("top", "0");
+        canvas.style("left", "0");
+        canvas.style("z-index", "-1");
+
+        for (let i = 0; i < numParticles; i++) {
+          particles.push(new Particle());
+        }
+      }
+
+      function draw() {
+        background("#1a1a1a");
+        for (let i = 0; i < particles.length; i++) {
+          particles[i].update();
+          particles[i].show();
+          for (let j = i + 1; j < particles.length; j++) {
+            let d = dist(
+              particles[i].x,
+              particles[i].y,
+              particles[j].x,
+              particles[j].y
+            );
+            if (d < connectionDistance) {
+              let alpha = map(d, 0, connectionDistance, 40, 0);
+              stroke(255, 255, 255, alpha);
+              strokeWeight(0.5);
+              line(
+                particles[i].x,
+                particles[i].y,
+                particles[j].x,
+                particles[j].y
+              );
+            }
+          }
+        }
+      }
+
+      class Particle {
+        constructor() {
+          this.x = random(width);
+          this.y = random(height);
+          this.vx = random(-0.5, 0.5);
+          this.vy = random(-0.5, 0.5);
+          this.r = random(1, 3);
+          this.color = 255;
+        }
+
+        update() {
+          this.x += this.vx;
+          this.y += this.vy;
+
+          if (this.x < 0 || this.x > width) {
+            this.vx *= -1;
+          }
+          if (this.y < 0 || this.y > height) {
+            this.vy *= -1;
+          }
+        }
+
+        show() {
+          noStroke();
+          fill(this.color);
+          ellipse(this.x, this.y, this.r * 2);
+        }
+      }
+
+      function windowResized() {
+        resizeCanvas(windowWidth, windowHeight);
+      }
+    </script>
   </body>
 </html>
