--- a/Frontend/pages/Admin/users.html
+++ b/Frontend/pages/Admin/users.html
@@ -15,21 +15,84 @@
     />
     <style>
       body {
-        background-color: #f0f2f5;
+        background-color: #1a1a1a; /* Dark background */
+        color: #e0e0e0; /* Light text color */
+        font-family: Arial, sans-serif;
+        overflow-x: hidden;
+        position: relative;
       }
       .navbar {
-        background-color: #ffffff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        background-color: #1c1c1c; /* Dark navbar background */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      }
+      .navbar-brand {
+        color: #f0f0f0 !important;
+      }
+      .h5,
+      h3 {
+        color: #f0f0f0 !important;
       }
       .table-container {
-        background-color: #ffffff;
+        background-color: rgba(36, 36, 36, 0.8);
+        backdrop-filter: blur(5px);
         border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
+      .table {
+        color: #e0e0e0;
+      }
+      .table-hover tbody tr:hover {
+        background-color: rgba(255, 255, 255, 0.05);
+      }
+      .table thead th {
+        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+        color: #373737;
+      }
+      .modal-content {
+        background-color: #242424;
+        color: #e0e0e0;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
+      .modal-header {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      }
+      .modal-footer {
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+      }
+      .form-control {
+        background-color: #333;
+        color: #f0f0f0;
+        border: 1px solid #555;
+      }
+      .form-control:focus {
+        background-color: #333;
+        color: #f0f0f0;
+        border-color: #0d6efd;
+        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+      }
+      .btn-outline-info {
+        color: #0d6efd;
+        border-color: #0d6efd;
+      }
+      .btn-outline-info:hover {
+        background-color: #0d6efd;
+        color: #fff;
+      }
+
+      /* Particle Network Background */
+      #p5-canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
       }
     </style>
   </head>
 
   <body>
+    <canvas id="p5-canvas"></canvas>
+
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
       <div class="container-fluid">
         <a
@@ -98,7 +161,7 @@
             <h5 class="modal-title" id="removeUserModalLabel">Remove User</h5>
             <button
               type="button"
-              class="btn-close"
+              class="btn-close btn-close-white"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></button>
@@ -139,6 +202,87 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
     <script src="/Frontend/JavaScript/Admin/users.js"></script>
+
+    <script>
+      let particles = [];
+      const numParticles = 100;
+      const connectionDistance = 150;
+
+      function setup() {
+        let canvas = createCanvas(windowWidth, windowHeight);
+        canvas.id("p5-canvas");
+        canvas.style("display", "block");
+        canvas.style("position", "fixed");
+        canvas.style("top", "0");
+        canvas.style("left", "0");
+        canvas.style("z-index", "-1");
+
+        for (let i = 0; i < numParticles; i++) {
+          particles.push(new Particle());
+        }
+      }
+
+      function draw() {
+        background("#1a1a1a");
+        for (let i = 0; i < particles.length; i++) {
+          particles[i].update();
+          particles[i].show();
+          for (let j = i + 1; j < particles.length; j++) {
+            let d = dist(
+              particles[i].x,
+              particles[i].y,
+              particles[j].x,
+              particles[j].y
+            );
+            if (d < connectionDistance) {
+              let alpha = map(d, 0, connectionDistance, 40, 0);
+              stroke(255, 255, 255, alpha);
+              strokeWeight(0.5);
+              line(
+                particles[i].x,
+                particles[i].y,
+                particles[j].x,
+                particles[j].y
+              );
+            }
+          }
+        }
+      }
+
+      class Particle {
+        constructor() {
+          this.x = random(width);
+          this.y = random(height);
+          this.vx = random(-0.5, 0.5);
+          this.vy = random(-0.5, 0.5);
+          this.r = random(1, 3);
+          this.color = 255;
+        }
+
+        update() {
+          this.x += this.vx;
+          this.y += this.vy;
+
+          if (this.x < 0 || this.x > width) {
+            this.vx *= -1;
+          }
+          if (this.y < 0 || this.y > height) {
+            this.vy *= -1;
+          }
+        }
+
+        show() {
+          noStroke();
+          fill(this.color);
+          ellipse(this.x, this.y, this.r * 2);
+        }
+      }
+
+      function windowResized() {
+        resizeCanvas(windowWidth, windowHeight);
+      }
+    </script>
   </body>
 </html>
